[metadata]
name = kiara_modules.default
description = A set of default modules (and pipelines) for Kiara.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DHARPA-project/kiara_modules_default
author = Markus Binsteiner
author_email = markus.binsteiner@uni.lu
license = MPL-2.0
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find_namespace:
install_requires =
    appdirs>=1.4.4,<2.0.0
    kiara
    pandas>=1.2.0
    pp-ez>=0.2.0
    pyarrow>=4.0.0,<5.0.0
python_requires = >=3.6
include_package_data = True
package_dir =
    =src
setup_requires =
    setuptools_scm
    setuptools_scm_git_archive
zip_safe = False

[options.entry_points]
kiara.modules =
    and = kiara_modules.default.logic_gates:AndModule
    not = kiara_modules.default.logic_gates:NotModule
    or = kiara_modules.default.logic_gates:OrModule
    dummy = kiara_modules.default.dev:DummyModule
    create_graph_from_edges_table = kiara_modules.default.network_analysis:CreateGraphFromEdgesTableModule
    augment_network_graph = kiara_modules.default.network_analysis:AugmentNetworkGraphModule
    add_nodes_to_network_graph = kiara_modules.default.network_analysis:AddNodesToNetworkGraphModule
    import_local_file = kiara_modules.default.data_onboarding:ImportLocalFileModule
    import_local_folder = kiara_modules.default.data_onboarding:ImportLocalFolderModule
    create_table_from_file = kiara_modules.default.tabular_data:CreateTableFromFileModule
    create_table_from_text_files = kiara_modules.default.tabular_data:CreateTableFromTextFilesModule
    merge_table = kiara_modules.default.tabular_data:MergeTableModule
    filter_table = kiara_modules.default.tabular_data:FilterTableModule
    prepare_nodes_table_lena = kiara_modules.default.scratchpad:PrepareNodesTableLenaModule
    find_shortest_path = kiara_modules.default.network_analysis:FindShortestPathModule
    graph_properties = kiara_modules.default.network_analysis:ExtractGraphPropertiesModule
    map = kiara_modules.default.array_data:MapModule
    extract_date = kiara_modules.default.dates:ExtractDateModule
    date_range_check = kiara_modules.default.dates:DateRangeCheckModule
    match_regex = kiara_modules.default.strings:RegexModule
    replace_string = kiara_modules.default.strings:ReplaceStringModule
    tokenize_text = kiara_modules.default.language_processing:TokenizeTextModule
    included_in_list_check = kiara_modules.default.lists:IncludedInListCheckModule
    remove_stopwords = kiara_modules.default.language_processing:RemoveStopwordsModule
    lemmatize_single = kiara_modules.default.language_processing:LemmatizeTokensModule
    lemmatize = kiara_modules.default.language_processing:LemmatizeTokensArrayModule
    lda = kiara_modules.default.language_processing:LDAModule
    pretty_print = kiara_modules.default.strings:PrettyPrintModule
kiara.pipelines =
    default = kiara_modules:default

[options.extras_require]
cli =
    asyncclick>=7.0.9,<8.0.0
    uvloop>=0.14.0,<1.0.0;platform_system=="Linux"
dev_build =
    frkl.project[build,all]
dev_documentation =
    frkl.project[documentation]
    mkdocs-gen-files>=0.3.1
    mknotebooks>=0.7.0
dev_testing =
    flake8>=3.8.4
    mypy>=0.800
    pytest>=6.2.2
    pytest-cov>=2.11.1
    tox>=3.21.2
dev_utils =
    black
    cruft>=2.6.0
    flake8>=3.8.4
    ipython
    pip-licenses>=3.3.0
    pp-ez>=0.2.0
    pre-commit>=2.9.3
    setup-cfg-fmt>=1.16.0
    watchgod>=0.6
    wheel
language_processing =
    gensim>=4.0.0
    nltk>=3.6.0
    python-Levenshtein>=0.12.0
    spacy>=3.0.0

[options.packages.find]
where = src
exclude =
    tests

[aliases]
build = bdist_wheel
release = build upload

[bdist_wheel]
universal = 1

[devpi:upload]
no-vcs = 1
formats = sdist, bdist_wheel

[tool:pytest]
addopts =
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[tox:tox]
envlist = py36, py37, py38, flake8

[testenv]
setenv =
    PYTHONPATH = {toxinidir}
deps =
    -e{toxinidir}[dev_testing,all]
install_command = pip install --pre --extra-index-url=https://gitlab.com/api/v4/projects/25344049/packages/pypi/simple {opts} {packages}
commands =
    pip install -U pip
    py.test --basetemp={envtmpdir}

[testenv:flake8]
basepython = python
deps =
    -e{toxinidir}[dev_testing,all]
    flake8
install_command = pip install --pre --extra-index-url=https://gitlab.com/api/v4/projects/25344049/packages/pypi/simple {opts} {packages}
commands = flake8 src

[coverage:run]
branch = True
source = kiara_modules.default

[coverage:paths]
source =
    src/
    */site-packages/

[coverage:report]
exclude_lines =
    pragma: no cover
   
    def __repr__
    if self\.debug
   
    raise AssertionError
    raise NotImplementedError
   
    if 0:
    if __name__ == .__main__.:

[flake8]
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
    .git
    __pycache__
ignore = F405, W503, E501
max-line-length = 88

[isort]
profile = "black"

[mypy]
mypy_path =
    src/
namespace_packages = false

[mypy-appdirs]
ignore_missing_imports = true

[mypy-asyncclick]
ignore_missing_imports = true

[mypy-devtools]
ignore_missing_imports = true

[mypy-gensim.*]
ignore_missing_imports = true

[mypy-pandas]
ignore_missing_imports = true

[mypy-nltk.*]
ignore_missing_imports = true

[mypy-it_core_news_sm]
ignore_missing_imports = true

[mypy-networkx.*]
ignore_missing_imports = true

[mypy-pyarrow.*]
ignore_missing_imports = true

[mypy-ruamel.*]
ignore_missing_imports = true

[mypy-uvloop]
ignore_missing_imports = true
